# rca-claude-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: rca-reindex.service  rca-reindex.timer  rca-webapp.service
fixtures/: architecture.md
fixtures/gitlab/acme__billing-service/: meta.json
fixtures/gitlab/acme__billing-service/files/billing/: api.py  invoice.py
fixtures/graphs/: acme__billing-service.graphify.json  acme__billing-service.json
fixtures/repo_summaries/: acme__billing-service.md  acme__notifications-service.md
fixtures/tickets/: RCA-101.json  RCA-201.json
rca_agent/: __init__.py  agent.py  app_db.py  app_mongo.py  architecture.py  config.py  daemon.py  error_lookup.py  fix_agent.py  fix_mr.py  fix_tools.py  gitlab_client.py  graph.py  graph_store.py  graphify_adapter.py  index.py  investigation.py  jira.py  local_search.py  metrics.py  newrelic.py  prompts.py  reindex.py  routing.py  run.py  schema.py  search.py  stack_trace.py  summarize.py  tickets.py  tools.py  trace.py  verify.py
rca_agent/eval/: .gitignore  README.md  __init__.py  __main__.py  _common.py  dataset.py  evaluators.py  ground_truth.example.jsonl  phoenix_client.py  run.py  run_eval.py  score.py  task.py
rca_agent/profiles/: __init__.py  reco_summary.md
rca_agent/webapp/: app.py  db.py
rca_agent/webapp/static/: index.html
tests/: test_agent_tools.py  test_blame_guard.py  test_graph.py  test_live_wiring.py  test_navigable.py  test_no_trace.py  test_summaries_arch.py  test_trace_first.py  test_webapp_db.py
