[project]
name = "rca-agent"
version = "0.1.0"
description = "Accuracy-first RCA agent over Jira tickets + self-hosted GitLab (trace-first slice)"
requires-python = ">=3.10"
dependencies = [
    # Agent loop / MCP wiring. Needed only for the --agent path.
    "claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
# Live GitLab backend (RestGitLabClient). The mock path needs neither.
live = ["httpx>=0.27"]
dev = ["pytest>=8.0", "httpx>=0.27"]
webapp = ["httpx>=0.27", "fastapi>=0.111", "uvicorn>=0.29", "pdfplumber>=0.11"]
# Read-only app-data verification tools (query_users_db / query_app_data):
# Postgres (users/orgs) + MongoDB (business documents).
appdb = ["psycopg[binary]>=3.1", "pymongo>=4.6"]

[project.scripts]
rca = "rca_agent.run:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rca_agent", "rca_agent.webapp"]
